Version 1.3.2
-------------

- Automatically set ``stacktrace.app.packages`` on Android if it is not provided by the user.

Version 1.3.1
-------------

- Reduce startup and shutdown logging noise by moving a lot of INFO level logs to DEBUG.
- Android: fallback to `os.version` property for kernel version is `/proc/version` is unreadable.

Version 1.3.0
-------------

- Deprecate ``extratags`` in favor of the more clear ``mdctags``.
- Add ability to set ``extra`` data via options and on ``SentryClient`` instances.
- Add ability to set ``extra`` data and ``tags`` in the current context.

Version 1.2.2
-------------

- Make operations on Context threadsafe.

Version 1.2.1
-------------

- Fix ``SentryStackTraceElement`` to implement ``Serializable``.

Version 1.2.0
-------------

- Allow overriding the location of the properties file.
- Add support for handling and uploading Proguard files to Sentry (for Android applications).
- Cleanup thread local context in ``ThreadLocalContextManager`` after each servlet request finishes.
- Change the ``EventBuilder`` hostname lookup code to only run one thread at a time.
- Add ``ShouldSendEventCallback``, which can be added to each ``SentryClient`` instance.
- Add ability to set extra data on the ``UserInterface``.

Version 1.1.0
-------------

- Add ability to set the culprit from a SentryStackTraceElement.
- (alpha) Add agent to collect local variable informatino when an exception occurs.

Version 1.0.0
-------------

1.0.0 is a major refactor, please see the official documentation to see how configuration and usage
has changed: https://docs.sentry.io/clients/java/

- Move from ``com.getsentry.raven`` package to ``io.sentry``.
- Rename from ``raven-java`` to ``sentry-java``.
- Rename the ``Sentry`` class to ``SentryClient``.
- Rename the ``SentryFactory`` class to ``SentryClientFactory``, and renamed all subclasses
  to now end in ``ClientFactory``.
- Remove ``Breadcrumbs`` class.