@@ -214,6 +214,10 @@ public class DefaultSentryClientFactory extends SentryClientFactory {
      * Option to set extra data to be sent to Sentry.
      */
     public static final String EXTRA_OPTION = "extra";
+    /**
+     * Option for whether to enable an uncaught exception handler, defaults to 'true'.
+     */
+    public static final String UNCAUGHT_HANDLER_ENABLED_OPTION = "uncaught.handler.enabled";
 
     private static final Logger logger = LoggerFactory.getLogger(DefaultSentryClientFactory.class);
     private static final String FALSE = Boolean.FALSE.toString();
@@ -289,6 +293,10 @@ public class DefaultSentryClientFactory extends SentryClientFactory {
             for (Map.Entry<String, String> extraEntry : extra.entrySet()) {
                 sentryClient.addExtra(extraEntry.getKey(), extraEntry.getValue());
             }
+        }
+
+        if (getUncaughtHandlerEnabled(dsn)) {
+            sentryClient.setupUncaughtExceptionHandler();
         }
 
         return sentryClient;
@@ -848,6 +856,16 @@ public class DefaultSentryClientFactory extends SentryClientFactory {
      */
     protected int getBufferSize(Dsn dsn) {
         return Util.parseInteger(Lookup.lookup(BUFFER_SIZE_OPTION, dsn), BUFFER_SIZE_DEFAULT);
+    }
+
+    /**
+     * Whether or not to enable a {@link SentryUncaughtExceptionHandler}.
+     *
+     * @param dsn Sentry server DSN which may contain options.
+     * @return Whether or not to enable a {@link SentryUncaughtExceptionHandler}.
+     */
+    protected boolean getUncaughtHandlerEnabled(Dsn dsn) {
+        return !FALSE.equalsIgnoreCase(Lookup.lookup(UNCAUGHT_HANDLER_ENABLED_OPTION, dsn));
     }
 
     /**
