@@ -17,6 +17,12 @@ public class SentryUncaughtExceptionHandler implements Thread.UncaughtExceptionH
      * Reference to the pre-existing uncaught exception handler.
      */
     private Thread.UncaughtExceptionHandler defaultExceptionHandler;
+    /**
+     * Whether or not this instance is enabled. If it has been wrapped by another
+     * handler (and is therefore not the {@link Thread#getDefaultUncaughtExceptionHandler()}),
+     * this boolean is the only way we can disable it.
+     */
+    private volatile Boolean enabled = true;
 
     /**
      * Construct the {@link SentryUncaughtExceptionHandler}, storing the pre-existing uncaught exception
@@ -37,17 +43,19 @@ public class SentryUncaughtExceptionHandler implements Thread.UncaughtExceptionH
      */
     @Override
     public void uncaughtException(Thread thread, Throwable thrown) {
-        logger.trace("Uncaught exception received.");
+        if (enabled) {
+            logger.trace("Uncaught exception received.");
 
-        EventBuilder eventBuilder = new EventBuilder()
-            .withMessage(thrown.getMessage())
-            .withLevel(Event.Level.FATAL)
-            .withSentryInterface(new ExceptionInterface(thrown));
+            EventBuilder eventBuilder = new EventBuilder()
+                .withMessage(thrown.getMessage())
+                .withLevel(Event.Level.FATAL)
+                .withSentryInterface(new ExceptionInterface(thrown));
 
-        try {
-            Sentry.capture(eventBuilder);
-        } catch (Exception e) {
-            logger.error("Error sending uncaught exception to Sentry.", e);
+            try {
+                Sentry.capture(eventBuilder);
+            } catch (Exception e) {
+                logger.error("Error sending uncaught exception to Sentry.", e);
+            }
         }
 
         if (defaultExceptionHandler != null) {
@@ -59,19 +67,41 @@ public class SentryUncaughtExceptionHandler implements Thread.UncaughtExceptionH
     /**
      * Configures an uncaught exception handler which sends events to
      * Sentry, then calls the preexisting uncaught exception handler.
+     *
+     * @return {@link SentryUncaughtExceptionHandler} that was setup.
      */
-    public static void setup() {
+    public static SentryUncaughtExceptionHandler setup() {
+        logger.debug("Configuring uncaught exception handler.");
+
         Thread.UncaughtExceptionHandler currentHandler = Thread.getDefaultUncaughtExceptionHandler();
         if (currentHandler != null) {
             logger.debug("default UncaughtExceptionHandler class='" + currentHandler.getClass().getName() + "'");
         }
 
-        // don't double register
-        if (!(currentHandler instanceof SentryUncaughtExceptionHandler)) {
-            // register as default exception handler
-            Thread.setDefaultUncaughtExceptionHandler(
-                new SentryUncaughtExceptionHandler(currentHandler));
+        SentryUncaughtExceptionHandler handler = new SentryUncaughtExceptionHandler(currentHandler);
+        Thread.setDefaultUncaughtExceptionHandler(handler);
+        return handler;
+    }
+
+    /**
+     * Disable this instance and attempt to remove it as the default {@link Thread.UncaughtExceptionHandler}.
+     */
+    public void disable() {
+        enabled = false;
+
+        // It's possible that another uncaught exception handler was installed 'over' us.
+        // Whether or not it wrapped us, we have no control over what other classes do, and
+        // so we can only remove ourselves if we are still the ('top most') default handler.
+        // The 'enabled' boolean exists to ensure we no longer handle uncaught exceptions
+        // even in the scenario where we are wrapped.
+        Thread.UncaughtExceptionHandler currentHandler = Thread.getDefaultUncaughtExceptionHandler();
+        if (currentHandler == this) {
+            Thread.setDefaultUncaughtExceptionHandler(defaultExceptionHandler);
         }
+    }
+
+    public Boolean isEnabled() {
+        return enabled;
     }
 
 }
